--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,12 +242,12 @@ a:hover {
 
 .ico-circle .tooltiptext {
   visibility: hidden;
-  width: 80px;
+  width: 90px;
   background-color: black;
   color: #fff;
   text-align: center;
   border-radius: 6px;
-  padding: 5px 0;
+  padding: 5px 5px;
   
   font-size: 15px;
 
@@ -256,7 +256,7 @@ a:hover {
   z-index: 1;
   bottom: 115%;
   left: 50%;
-  margin-left: -40px;
+  margin-left: -45px;
 }
 
 .ico-circle:hover .tooltiptext {
@@ -936,7 +936,7 @@ a:hover {
 .counter-ico .ico-circle {
   height: 60px;
   width: 60px;
-  line-height: 1.5;
+  line-height: 1.7;
   box-shadow: 0 0 0 10px #cde1f8;
 }
 
@@ -944,7 +944,7 @@ a:hover {
   font-size: 2rem;
   margin-bottom: 0;
 }
-
+ 
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
